# NCNote

./: .gitignore  CMakeLists.txt  Collection.cpp  Collection.h  CollectionInterface.h  Collections.cpp  Collections.h  NCView.cpp  NCView.h  Note.cpp  Note.h  NoteInterface.h  QTView.cpp  QTView.h  README.md  TextNote.cpp  TextNote.h  ViewInterface.h  main.cpp
test/: CMakeLists.txt  QTNote_test.cpp  runTests.cpp
test/lib/googletest/: CMakeLists.txt
test/lib/googletest/cmake/: internal_utils.cmake
test/lib/googletest/include/gtest/: gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-typed-test.h  gtest.h  gtest_prod.h
test/lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-port.h
test/lib/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
